--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "author": "Grant Forrest",
   "license": "MIT",
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "@yarnpkg/pnpify": "^2.0.0-rc.18",
+    "eslint": "^6.8.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.5"
   }
 }
