--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,5 +23,8 @@
     "@types/react": "^16.9.19",
     "typescript": "^3.7.5"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "peerDependencies": {
+    "react": "*"
+  }
 }
