--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -11,7 +11,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "noImplicitAny": true,
     "noImplicitReturns": true
   },
