--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,6 +29,7 @@
     "react": "^16.12.0",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-dom": "^16.12.0",
+    "react-popper": "^1.3.7",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5"
   },
