--- a/homepage/package.json
+++ b/homepage/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@dimension/react": "0.1.0",
+    "@dimension/react": "../packages/react",
     "@parcel/diagnostic": "^2.0.0-alpha.3",
     "babel-types": "^6.26.0"
   },
@@ -12,7 +12,7 @@
     "@types/node": "^13.7.1",
     "@types/react": "^16.9.20",
     "@types/react-dom": "^16.9.5",
-    "parcel": "git@github.com:a-type/parcel.git",
+    "parcel": "^2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "typescript": "^3.7.5"
