--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,13 +7,19 @@
   },
   "version": "0.1.0",
   "files": [
-    "dist"
+    "dist",
+    "dist-esm"
   ],
   "main": "./dist/index.js",
+  "module": "./dist-esm/index.js",
   "typings": "./dist/index.d.ts",
   "scripts": {
-    "build": "yarn tsc",
-    "watch": "yarn tsc --watch",
+    "build:cjs": "yarn tsc",
+    "build:esm": "yarn tsc -m es6 --outDir dist-esm",
+    "build": "run-p build:*",
+    "watch:cjs": "yarn tsc --watch",
+    "watch:esm": "yarn tsc -m es6 --watch --outDir dist-esm",
+    "watch": "run-p watch:*",
     "docs": "yarn typedoc",
     "test": "yarn jest"
   },
@@ -24,6 +30,7 @@
     "@types/jest": "^25.1.2",
     "@types/node": "^13.7.1",
     "jest": "^25.1.0",
+    "npm-run-all": "^4.1.5",
     "typedoc": "next",
     "typescript": "^3.7.5"
   },
