--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -8,12 +8,12 @@
     "allowJs": false,
     "esModuleInterop": true,
     "strict": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "jsx": "preserve",
     "noImplicitAny": true,
     "noImplicitReturns": true
   },
-  "include": ["src", "../dom/src/internal/keyboard.ts"]
+  "include": ["src"]
 }
