--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "watch:core": "cd ./packages/core && npm run watch",
-    "watch:react": "cd ./packages/react && npm run react",
+    "watch:core": "yarn workspace @dimension/core watch",
+    "watch:react": "yarn workspace @dimension/react watch",
     "watch": "run-p watch:*",
-    "build:core": "cd ./packages/core && npm run build",
-    "build:react": "cd ./packages/react && npm run build",
-    "build": "run-s build:*"
+    "build:core": "yarn workspace @dimension/core build",
+    "build:react": "yarn workspace @dimension/react build",
+    "build": "run-s build:*",
+    "test:core": "yarn workspace @dimension/core test",
+    "test:react": "yarn workspace @dimension/react test",
+    "test": "run-p test:*"
   },
   "workspaces": [
     "packages/*",
