--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -7,19 +7,37 @@
   },
   "version": "0.1.0",
   "files": [
-    "dist"
+    "dist",
+    "dist-esm"
   ],
   "main": "./dist/index.js",
+  "module": "./dist-esm/index.js",
   "typings": "./dist/index.d.ts",
   "scripts": {
-    "build": "yarn tsc",
-    "watch": "yarn tsc --watch"
+    "build:cjs": "yarn tsc",
+    "build:esm": "yarn tsc -m es6 --outDir dist-esm",
+    "build": "run-p build:*",
+    "watch:cjs": "yarn tsc --watch",
+    "watch:esm": "yarn tsc -m es6 --watch --outDir dist-esm",
+    "watch": "run-p watch:*",
+    "test": "yarn jest",
+    "test:watch": "yarn jest --watch --bail"
   },
   "dependencies": {
-    "@dimension/core": "0.1.0"
+    "@dimension/core": "0.1.0",
+    "events": "^3.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
+    "@testing-library/dom": "^6.12.2",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@types/jest": "^25.1.3",
     "@types/node": "^13.7.1",
+    "@types/testing-library__dom": "^6.12.1",
+    "jest": "^25.1.0",
     "typescript": "^3.7.5"
   },
   "license": "MIT"
