--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -8,7 +8,7 @@
     "allowJs": false,
     "esModuleInterop": true,
     "strict": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "jsx": "react",
