--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -45,6 +45,7 @@
     "@types/testing-library__react": "^9.1.2",
     "babel-loader": "^8.0.6",
     "jest": "^25.1.0",
+    "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-dom": "^16.12.0",
