--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -52,6 +52,7 @@
     "react-docgen-typescript-loader": "^3.6.0",
     "react-dom": "^16.12.0",
     "react-popper": "^1.3.7",
+    "smoothscroll-polyfill": "^0.4.4",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5"
   },
