--- a/package.json
+++ b/package.json
@@ -3,22 +3,9 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-    "watch:core": "yarn workspace @dimension/core watch",
-    "watch:react": "yarn workspace @dimension/react watch",
-    "watch:dom": "yarn workspace @dimension/dom watch",
-    "watch": "yarn run run-p watch:*",
-    "build:core": "yarn workspace @dimension/core build",
-    "build:react": "yarn workspace @dimension/react build",
-    "build:dom": "yarn workspace @dimension/dom build",
-    "build": "yarn run run-s build:*",
-    "test:core": "yarn workspace @dimension/core test",
-    "test:react": "yarn workspace @dimension/react test",
-    "test:dom": "yarn workspace @dimension/dom test",
-    "test": "yarn run run-p test:*",
     "release:core": "yarn workspace @dimension/core release",
     "release:react": "yarn workspace @dimension/react release",
-    "release:dom": "yarn workspace @dimension/dom release",
-    "release": "yarn run run-s release:*"
+    "release:dom": "yarn workspace @dimension/dom release"
   },
   "workspaces": [
     "packages/*",
