--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^25.1.3",
     "@types/node": "^13.7.1",
     "@types/testing-library__dom": "^6.12.1",
+    "@types/testing-library__jest-dom": "^5.0.3",
     "jest": "^25.1.0",
     "typescript": "^3.7.5"
   },
