--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -42,6 +42,7 @@
     "@types/jest": "^25.1.2",
     "@types/node": "^13.7.1",
     "@types/react": "^16.9.19",
+    "@types/testing-library__jest-dom": "^5.0.3",
     "@types/testing-library__react": "^9.1.2",
     "babel-loader": "^8.0.6",
     "jest": "^25.1.0",
